comunication between client and server beggining to work

--- a/Named_Pipes/Makefile
+++ b/Named_Pipes/Makefile
@@ -11,6 +11,9 @@ all: $(SRC)
 	gcc -c spawner.c
 	gcc coms.o spawner.o -o run
 
+	gcc -c client.c
+	gcc client.o  coms.o -o client
+
 	make clean
 
 clean:
