--- a/Named_Pipes/Makefile
+++ b/Named_Pipes/Makefile
@@ -1,12 +1,6 @@
 (SRC)=$(wildcard *.c)
 all: $(SRC)
 
-	gcc -c reader.c
-	gcc reader.c -o reader
-
-	gcc -c writer.c
-	gcc writer.c -o writer
-
 	gcc -c coms.c
 	gcc -c spawner.c
 	gcc coms.o spawner.o -o run
@@ -18,4 +12,4 @@ all: $(SRC)
 
 clean:
 	rm *.o
-	rm /tmp/*fifo*
+	rm -f /tmp/*fifo*
