--- a/Server/Makefile
+++ b/Server/Makefile
@@ -32,6 +32,7 @@ OBJ+= server.o
 .PHONY: clean all
 
 all:
+	cd Logs; make
 	gcc -c $(DB) $(COMS) $(SERVER) $(DBh) $(MARSH) $(MARSHh) $(COMSh) $(SERVERh) $(UUIDDBh) server.c server.h
 	g++ -c $(UUIDDB)
 	g++ -o ./run $(OBJ) -pthread
