working fine, user is not keeping his potatoes though

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -24,18 +24,18 @@ MARSH= $(wildcard $(MARSHPath)/*.c)
 MARSHh= $(wildcard $(MARSHPath)/*.h)
 
 OBJ= $(subst $(DBPath),.,$(DB:.c=.o))
-OBJ+= $(subst $(UUIDPath),.,$(UUIDDB:.cpp=.o))
-OBJ+= $(subst $(COMPath),.,$(COMS:.c=.o))
-OBJ+= $(subst $(MARSHPath),.,$(MARSH:.c=.o))
+OBJ+= $(subst $(UUIDPath)/, ,$(UUIDDB:.cpp=.o))
+OBJ+= $(subst $(COMPath)/, ,$(COMS:.c=.o))
+OBJ+= $(subst $(MARSHPath)/, ,$(MARSH:.c=.o))
 OBJ+= server.o
 
 .PHONY: clean all
 
 all:
 	#cd Logs; make
-	gcc -c $(DB) $(COMS) $(SERVER) $(DBh) $(MARSH) $(MARSHh) $(COMSh) $(SERVERh) $(UUIDDBh) server.c server.h
-	g++ -c $(UUIDDB)
-	g++ -o ./run $(OBJ) -pthread
+	gcc -g -c $(DB) $(COMS) $(SERVER) $(DBh) $(MARSH) $(MARSHh) $(COMSh) $(SERVERh) $(UUIDDBh) server.c server.h
+	g++ -g -c $(UUIDDB)
+	g++ -g -o run $(OBJ) -pthread
 	rm *.o $(UUIDPath)/*.gch
 
 clean:
